Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -210,7 +210,7 @@
   "ja-name:209.ja188": "Der Löwenschakal ",
   "ja-name:210.ja189": "Der Schakal, der eine Löwenhaut trug ",
   "ja-name:211.ja190": "Der Nutzen der Sittlichkeit ",
-  "ja-name:212.ja-ruhakavagga": "Der Preister mit Namen Ruhaka ",
+  "ja-name:212.ja-ruhakavagga": "Das Kapitel mit dem Preister mit Namen Ruhaka ",
   "ja-name:213.ja191": "Der Preister mit Namen Ruhaka ",
   "ja-name:214.ja192": "Glücklicher Pechvogel ",
   "ja-name:215.ja193": "Prinz Lotus ",
