Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -232,7 +232,7 @@
   "ja-name:231.ja208": "Das Krokodil ",
   "ja-name:232.ja209": "Das alte Huhn ",
   "ja-name:233.ja210": "Der Specht mit Namen Knollenfresser ",
-  "ja-name:234.ja-biranathambhavagga": "Grasbüschel ",
+  "ja-name:234.ja-biranathambhavagga": "Das Kapitel mit den Grasbüscheln ",
   "ja-name:235.ja211": "Somadatta der Sohn des Bauern ",
   "ja-name:236.ja212": "Ein Resteessen ",
   "ja-name:237.ja213": "König Bharu ",
