--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -243,7 +243,7 @@
   "ja-name:242.ja218": "Der betrügerische Kaufmann ",
   "ja-name:243.ja219": "Verachtet ",
   "ja-name:244.ja220": "Der Prediger mit Namen Banner der Lehre ",
-  "ja-name:245.ja-kasavavagga": "Die ockerfarbene Robe ",
+  "ja-name:245.ja-kasavavagga": "Das Kapitel mit der ockerfarbenen Robe ",
   "ja-name:246.ja221": "Die ockerfarbene Robe ",
   "ja-name:247.ja222": "Der Affe Nandiya ",
   "ja-name:248.ja223": "Das Fleischpaket ",
