--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -254,7 +254,7 @@
   "ja-name:253.ja228": "Der Brahmane mit Namen Verlangen-geleitet ",
   "ja-name:254.ja229": "Der Hohn (1) ",
   "ja-name:255.ja230": "Der Hohn (2) ",
-  "ja-name:256.ja-upahanavagga": "Ein Paar Sandalen ",
+  "ja-name:256.ja-upahanavagga": "Das Kapitel mit einem Paar Sandalen ",
   "ja-name:257.ja231": "Ein Paar Sandalen ",
   "ja-name:258.ja232": "Die Harfe ",
   "ja-name:259.ja233": "Ein Pfeil mit Widerhaken ",
