Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -265,7 +265,7 @@
   "ja-name:264.ja238": "Ein Wort ",
   "ja-name:265.ja239": "Der grüne Frosch ",
   "ja-name:266.ja240": "König Gelb der Große ",
-  "ja-name:267.ja-singalavagga": "Der Schakal ",
+  "ja-name:267.ja-singalavagga": "Das Kapitel mit dem Schakal ",
   "ja-name:268.ja241": "Allzahn der Schakalkönig ",
   "ja-name:269.ja242": "Der Hund ",
   "ja-name:270.ja243": "Der Musiker Guttila ",
