Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -277,7 +277,7 @@
   "ja-name:276.ja249": "Mein lieber Bruder Affe ",
   "ja-name:277.ja250": "Der Affe ",
   "ja-name:278.ja-tikanipata": "Das Dreierbuch ",
-  "ja-name:279.ja-sankappavagga": "Gedanken des Wollens ",
+  "ja-name:279.ja-sankappavagga": "Das Kapitel mit Gedanken des Wollens ",
   "ja-name:280.ja251": "Gedanken des Wollens ",
   "ja-name:281.ja252": "Das Verstreuen von Sesam ",
   "ja-name:282.ja253": "Juwelenhals der Drachenkönig ",
