--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -299,7 +299,7 @@
   "ja-name:298.ja268": "Der Mann, der einen Park ruinierte ",
   "ja-name:299.ja269": "Sujātā die Kaufmannstochter ",
   "ja-name:300.ja270": "Die Eule ",
-  "ja-name:301.ja-udapanavagga": "Der verdorbene Brunnen ",
+  "ja-name:301.ja-udapanavagga": "Das Kapitel mit dem verdorbenen Brunnen ",
   "ja-name:302.ja271": "Der verdorbene Brunnen ",
   "ja-name:303.ja272": "Der Tiger ",
   "ja-name:304.ja273": "Die Schildkröte ",
