Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -310,7 +310,7 @@
   "ja-name:309.ja278": "Der Büffelkönig ",
   "ja-name:310.ja279": "Der Specht ",
   "ja-name:311.ja280": "Zerstörer von Blätterkörben ",
-  "ja-name:312.ja-abbhantaravagga": "Die innerste Mango ",
+  "ja-name:312.ja-abbhantaravagga": "Das Kapitel mit der innersten Mango ",
   "ja-name:313.ja281": "Die innerste Mango ",
   "ja-name:314.ja282": "Es besser machen ",
   "ja-name:315.ja283": "Das junge Wildschwein ",
