--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -321,7 +321,7 @@
   "ja-name:320.ja288": "Ein Fischschwarm ",
   "ja-name:321.ja289": "Von verschiedenen Wünschen ",
   "ja-name:322.ja290": "Eine Tugendprobe ",
-  "ja-name:323.ja-kumbhavagga": "Der Becher ",
+  "ja-name:323.ja-kumbhavagga": "Das Kapitel mit dem Becher ",
   "ja-name:324.ja291": "Der Glücksbecher ",
   "ja-name:325.ja292": "Schönflügel der Krähenkönig ",
   "ja-name:326.ja293": "Sichabwenden vom Körper ",
