--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -333,7 +333,7 @@
   "ja-name:332.ja299": "Der Asket Komāraputta ",
   "ja-name:333.ja300": "Der Wolf ",
   "ja-name:334.ja-catukkanipata": "Das Viererbuch ",
-  "ja-name:335.ja-kalingavagga": "König Kāliṅga ",
+  "ja-name:335.ja-kalingavagga": "Das Kapitel mit König Kāliṅga ",
   "ja-name:336.ja301": "König Kāliṅga ",
   "ja-name:337.ja302": "Der große Reiter ",
   "ja-name:338.ja303": "Der eine König ",
