Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -344,7 +344,7 @@
   "ja-name:343.ja308": "Der flinke Vogel ",
   "ja-name:344.ja309": "Der Unglückswurm, der zum König der Nacht wurde ",
   "ja-name:345.ja310": "Besser ",
-  "ja-name:346.ja-pucimandavagga": "Der Niembaum ",
+  "ja-name:346.ja-pucimandavagga": "Das Kapitel mit dem Niembaum ",
   "ja-name:347.ja311": "Der Niembaum ",
   "ja-name:348.ja312": "Törichte Jugend ",
   "ja-name:349.ja313": "Der Geduldslehrer ",
