Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -366,7 +366,7 @@
   "ja-name:365.ja328": "Klage nicht ",
   "ja-name:366.ja329": "Der Affe Schwarzarm ",
   "ja-name:367.ja330": "Eine Tugendprobe ",
-  "ja-name:368.ja-kokilavagga": "Der Kuckuck ",
+  "ja-name:368.ja-kokilavagga": "Das Kapitel mit dem Kuckuck ",
   "ja-name:369.ja331": "Der Kuckuck ",
   "ja-name:370.ja332": "Die Peitsche der Kutsche ",
   "ja-name:371.ja333": "Die gekochte Eidechse ",
