Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -377,7 +377,7 @@
   "ja-name:376.ja338": "Ein Korn nach dem anderen ",
   "ja-name:377.ja339": "Krähen nach Babylon verkaufen ",
   "ja-name:378.ja340": "Der Kaufmann Visayha ",
-  "ja-name:379.ja-catukkanipata-culakunalavagga": "Das Kapitel über den Kuckuck ",
+  "ja-name:379.ja-catukkanipata-culakunalavagga": "Das kleinere Kapitel mit dem Kuckuck ",
   "ja-name:380.ja341": "Über Kaṇḍarī ",
   "ja-name:381.ja342": "Der Langur ",
   "ja-name:382.ja343": "Der Reiher ",
