Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -389,7 +389,7 @@
   "ja-name:388.ja349": "Verleumdung ",
   "ja-name:389.ja350": "Die Frage der Gottheit ",
   "ja-name:390.ja-pancakanipata": "Das Fünferbuch ",
-  "ja-name:391.ja-manikundalavagga": "Juwelenbesetzte Ohrringe ",
+  "ja-name:391.ja-manikundalavagga": "Das Kapitel mit juwelenbesetzten Ohrringen ",
   "ja-name:392.ja351": "Juwelenbesetzte Ohrringe ",
   "ja-name:393.ja352": "Der fromme Sohn Sujāta ",
   "ja-name:394.ja353": "Unter den austreibenden Zweigen ",
