Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -400,7 +400,7 @@
   "ja-name:399.ja358": "Die kürzere Geschichte von Dhammapāla ",
   "ja-name:400.ja359": "Das goldene Reh ",
   "ja-name:401.ja360": "Königin Suyonandī ",
-  "ja-name:402.ja-vannarohavagga": "In Schönheit und Wuchs ",
+  "ja-name:402.ja-vannarohavagga": "Das Kapitel über Schönheit und Wuchs ",
   "ja-name:403.ja361": "In Schönheit und Wuchs ",
   "ja-name:404.ja362": "Eine Tugendprobe ",
   "ja-name:405.ja363": "Gewissen ",
