--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -418,7 +418,7 @@
   "ja-name:417.ja374": "Die kürzere Geschichte vom klugen kleinen Bogenschützen ",
   "ja-name:418.ja375": "Die Taube ",
   "ja-name:419.ja-chakkanipata": "Das Sechserbuch ",
-  "ja-name:420.ja-avariyavagga": "Avāriyās Vater, der törichte Fährmann ",
+  "ja-name:420.ja-avariyavagga": "Das Kapitel mit Avāriyās Vater, dem törichten Fährmann ",
   "ja-name:421.ja376": "Avāriyās Vater, der törichte Fährmann ",
   "ja-name:422.ja377": "Der Student Setaketu ",
   "ja-name:423.ja378": "Darīmukha, der Sohn des Priesters ",
