Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -429,7 +429,7 @@
   "ja-name:428.ja383": "Das Huhn ",
   "ja-name:429.ja384": "Eine falsche Flagge ",
   "ja-name:430.ja385": "Nandiya der Hirschkönig ",
-  "ja-name:431.ja-kharaputtavagga": "Der törichte Esel ",
+  "ja-name:431.ja-kharaputtavagga": "Das Kapitel mit dem törichten Esel ",
   "ja-name:432.ja386": "Der törichte Esel ",
   "ja-name:433.ja387": "Nadeln ",
   "ja-name:434.ja388": "Die Keiler-Brüder Tuṇḍila ",
