Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -441,7 +441,7 @@
   "ja-name:440.ja394": "Die Wachtel ",
   "ja-name:441.ja395": "Die Taube ",
   "ja-name:442.ja-sattakanipata": "Das Siebenerbuch ",
-  "ja-name:443.ja-kukkuvagga": "Ein halber Meter ",
+  "ja-name:443.ja-kukkuvagga": "Das Kapitel mit einem halben Meter ",
   "ja-name:444.ja396": "Ein halber Meter ",
   "ja-name:445.ja397": "Manoja das Löwenjunge, das sich mit einem Schakal anfreundete ",
   "ja-name:446.ja398": "Der junge Mann Sutanū ",
