Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -452,7 +452,7 @@
   "ja-name:451.ja403": "Der Asket Atthisena ",
   "ja-name:452.ja404": "Der Affe ",
   "ja-name:453.ja405": "Der Kranich ",
-  "ja-name:454.ja-gandharavagga": "Im Königreich von Gandhāra ",
+  "ja-name:454.ja-gandharavagga": "Das Kapitel im Königreich von Gandhāra ",
   "ja-name:455.ja406": "Im Königreich von Gandhāra ",
   "ja-name:456.ja407": "Der große Affe ",
   "ja-name:457.ja408": "Der Töpfer ",
