--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -465,7 +465,7 @@
   "ja-name:464.ja415": "Ein Löffel Brei ",
   "ja-name:465.ja416": "Der Ehebrecher Parantapa ",
   "ja-name:466.ja-atthakanipata": "Das Achterbuch ",
-  "ja-name:467.ja-kaccanivagga": "Als Kaccāni Dhamma ein Todesopfer darbrachte ",
+  "ja-name:467.ja-kaccanivagga": "Das Kapitel mit Kaccāni ",
   "ja-name:468.ja417": "Als Kaccāni Dhamma ein Todesopfer darbrachte ",
   "ja-name:469.ja418": "Die acht Töne ",
   "ja-name:470.ja419": "Die Kurtisane Sulasā ",
