Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -491,7 +491,7 @@
   "ja-name:490.ja437": "Der Schakal Pūtimaṁsa ",
   "ja-name:491.ja438": "Das Rebhuhn ",
   "ja-name:492.ja-dasakanipata": "Das Zehnerbuch ",
-  "ja-name:493.ja-catudvaravagga": "Vier Tore ",
+  "ja-name:493.ja-catudvaravagga": "Das Kapitel mit vier Toren ",
   "ja-name:494.ja439": "Vier Tore ",
   "ja-name:495.ja440": "Der schwarze Weise ",
   "ja-name:496.ja441": "Die vier Besinnungstage ",
