Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -509,7 +509,7 @@
   "ja-name:508.ja453": "Die Vorgeschichte zur Lehrrede über Segen ",
   "ja-name:509.ja454": "Der Topf-Weise ",
   "ja-name:510.ja-ekadasakanipata": "Das Elferbuch ",
-  "ja-name:511.ja-matuposakavagga": "Der Elefant, der für seine Mutter sorgte ",
+  "ja-name:511.ja-matuposakavagga": "Das Kapitel mit dem Elefanten, der für seine Mutter sorgte ",
   "ja-name:512.ja455": "Der Elefant, der für seine Mutter sorgte ",
   "ja-name:513.ja456": "Prinz Mondlicht ",
   "ja-name:514.ja457": "Die Gottheit mit Namen Dhamma ",
