Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -532,7 +532,7 @@
   "ja-name:531.ja472": "Prinz Lotus ",
   "ja-name:532.ja473": "Freunde und Feinde ",
   "ja-name:533.ja-terasakanipata": "Das Dreizehnerbuch ",
-  "ja-name:534.ja-ambavagga": "Mangos ",
+  "ja-name:534.ja-ambavagga": "Das Kapitel mit Mangos ",
   "ja-name:535.ja474": "Mangos ",
   "ja-name:536.ja475": "Der Löwe und der Buchsbaum ",
   "ja-name:537.ja476": "Die flinke Gans ",
