--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -544,7 +544,7 @@
   "ja-name:543.ja482": "Der goldene Hirsch ",
   "ja-name:544.ja483": "Die Sarabha-Gazelle ",
   "ja-name:545.ja-pakinnakanipata": "Das gemischte Buch ",
-  "ja-name:546.ja-salikedaravagga": "Das Reisfeld ",
+  "ja-name:546.ja-salikedaravagga": "Das Kapitel mit dem Reisfeld ",
   "ja-name:547.ja484": "Das Reisfeld ",
   "ja-name:548.ja485": "Die Kobolde auf dem Mondberg ",
   "ja-name:549.ja486": "Der Fischadler ",
