Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -559,7 +559,7 @@
   "ja-name:558.ja495": "Zehn Arten von Brahmanen ",
   "ja-name:559.ja496": "Almosen sammeln ",
   "ja-name:560.ja-visatinipata": "Das Zwanzigerbuch ",
-  "ja-name:561.ja-matangavagga": "Mātaṅga der Weise ",
+  "ja-name:561.ja-matangavagga": "Das Kapitel mit Mātaṅga dem Weisen ",
   "ja-name:562.ja497": "Mātaṅga der Weise ",
   "ja-name:563.ja498": "Die Geschichte von Citta und Sambhūta ",
   "ja-name:564.ja499": "Prinz Sivi ",
