Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -575,7 +575,7 @@
   "ja-name:574.ja509": "Der Elefantenführer ",
   "ja-name:575.ja510": "Der Prinz vom Eisenhaus ",
   "ja-name:576.ja-timsanipata": "Das Dreißigerbuch ",
-  "ja-name:577.ja-kimchandavagga": "Was verlangst du? ",
+  "ja-name:577.ja-kimchandavagga": "Das Kapitel über das, was verlangt wird ",
   "ja-name:578.ja511": "Was verlangst du? ",
   "ja-name:579.ja512": "Die Sünde im Becher ",
   "ja-name:580.ja513": "Prinz Sieger ",
