Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -587,7 +587,7 @@
   "ja-name:586.ja519": "Königin Sambulā ",
   "ja-name:587.ja520": "Der duftende Malabar-Ebenholzbaum ",
   "ja-name:588.ja-cattalisanipata": "Das Vierzigerbuch ",
-  "ja-name:589.ja-tesakunavagga": "Die Vögel ",
+  "ja-name:589.ja-tesakunavagga": "Das Kapitel über die Vögel ",
   "ja-name:590.ja521": "Drei Vögel ",
   "ja-name:591.ja522": "Der Bogenschütze Sarabhaṅga ",
   "ja-name:592.ja523": "Die Nymphe Alambusā ",
