Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -594,7 +594,7 @@
   "ja-name:593.ja524": "Der Drache vom See Saṅkhapāla ",
   "ja-name:594.ja525": "Die kürzere Geschichte vom Prinzen Sutasoma ",
   "ja-name:595.ja-pannasanipata": "Das Fünfzigerbuch ",
-  "ja-name:596.ja-nilinikavagga": "Prinzessin Niḷinikā ",
+  "ja-name:596.ja-nilinikavagga": "Das Kapitel mit Prinzessin Niḷinikā ",
   "ja-name:597.ja526": "Prinzessin Niḷinikā ",
   "ja-name:598.ja527": "Die Tochter des Kaufmanns Ummādantī ",
   "ja-name:599.ja528": "Die längere Geschichte von dem jungen Mann Bodhi ",
