Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -599,7 +599,7 @@
   "ja-name:598.ja527": "Die Tochter des Kaufmanns Ummādantī ",
   "ja-name:599.ja528": "Die längere Geschichte von dem jungen Mann Bodhi ",
   "ja-name:600.ja-satthinipata": "Das Sechzigerbuch ",
-  "ja-name:601.ja-sonakavagga": "Prinz Arindama und sein Freund Soṇaka ",
+  "ja-name:601.ja-sonakavagga": "Das Kapitel mit Prinz Arindama und seinem Freund Soṇaka ",
   "ja-name:602.ja529": "Prinz Arindama und sein Freund Soṇaka ",
   "ja-name:603.ja530": "Prinz Brahmadatta und sein Freund Saṁkicca ",
   "ja-name:604.ja-sattatinipata": "Das Siebzigerbuch ",
