--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -603,7 +603,7 @@
   "ja-name:602.ja529": "Prinz Arindama und sein Freund Soṇaka ",
   "ja-name:603.ja530": "Prinz Brahmadatta und sein Freund Saṁkicca ",
   "ja-name:604.ja-sattatinipata": "Das Siebzigerbuch ",
-  "ja-name:605.ja-kusavagga": "König Gras ",
+  "ja-name:605.ja-kusavagga": "Das Kapitel mit König Gras ",
   "ja-name:606.ja531": "König Gras ",
   "ja-name:607.ja532": "Die Brüder Soṇa und Nanda ",
   "ja-name:608.ja-asitinipata": "Das Achtzigerbuch ",
