Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -607,7 +607,7 @@
   "ja-name:606.ja531": "König Gras ",
   "ja-name:607.ja532": "Die Brüder Soṇa und Nanda ",
   "ja-name:608.ja-asitinipata": "Das Achtzigerbuch ",
-  "ja-name:609.ja-culahamsavagga": "Die goldene Gans ",
+  "ja-name:609.ja-culahamsavagga": "Das Kapitel mit der goldenen Gans ",
   "ja-name:610.ja533": "Die kürzere Geschichte vom goldenen Schwan ",
   "ja-name:611.ja534": "Die längere Geschichte vom goldenen Schwan ",
   "ja-name:612.ja535": "Ein Opfer von Götterspeise ",
