Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -614,7 +614,7 @@
   "ja-name:613.ja536": "Der Kuckuck ",
   "ja-name:614.ja537": "Die längere Geschichte vom Prinzen Sutasoma ",
   "ja-name:615.ja-mahanipata": "Das große Buch ",
-  "ja-name:616.ja-mugapakkhavagga": "Mūgapakkha der Weise ",
+  "ja-name:616.ja-mugapakkhavagga": "Das Kapitel mit Mūgapakkha dem Weisen ",
   "ja-name:617.ja538": "Mūgapakkha der Weise ",
   "ja-name:618.ja539": "Die längere Geschichte vom König Janaka ",
   "ja-name:619.ja540": "Gold-Sāma ",
