Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -288,7 +288,7 @@
   "ja-name:287.ja258": "König Mandhātā ",
   "ja-name:288.ja259": "Der Asket Tirīṭavaccha ",
   "ja-name:289.ja260": "Der Bote ",
-  "ja-name:290.ja-padumavagga": "Das kapitel mit dem Lotus ",
+  "ja-name:290.ja-padumavagga": "Das Kapitel mit dem Lotus ",
   "ja-name:291.ja261": "Der Lotus ",
   "ja-name:292.ja262": "Eine sanfte Hand ",
   "ja-name:293.ja263": "Die kürzere Geschichte von Liebreiz ",
