--- a/translation/de/sabbamitta/sutta/an/an2/an2.42-51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.42-51_translation-de-sabbamitta.json
@@ -60,7 +60,7 @@
   "an2.46:1.3": "Eine Versammlung des Ausschusses und eine Versammlung der Crème. ",
   "an2.46:1.4": "Und was ist eine Versammlung des Ausschusses? ",
   "an2.46:1.5": "Eine Versammlung, in der die Mönche und Nonnen voreingenommen von Bevorzugung, Abneigung, Dummheit oder Feigheit handeln. ",
-  "an2.46:1.6": "Das nennt man eine Versammlung der Abfälle. ",
+  "an2.46:1.6": "Das nennt man eine Versammlung des Ausschusses. ",
   "an2.46:2.1": "Und was ist eine Versammlung der Crème? ",
   "an2.46:2.2": "Eine Versammlung, in der die Mönche und Nonnen unvoreingenommen von Bevorzugung, Abneigung, Dummheit und Feigheit handeln. ",
   "an2.46:2.3": "Das nennt man eine Versammlung der Crème. ",
