--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -617,7 +617,7 @@
   "dn23:32.19": "und der gleichen Art von Kleidern, wie ich sie trage.“ ",
   "dn23:32.20": "„Ja, Herr“, antwortete Uttara und tat wie geheißen. ",
   "dn23:32.22": "Und so gab der Stammesfürst Pāyāsi seine Gaben ohne Sorgfalt, gedankenlos, nicht mit eigener Hand, und er gab die Reste. Als sein Körper auseinanderbrach, nach dem Tod, wurde er unter den Göttern der Vier Großen Könige wiedergeboren, in einem leeren Akazienpalast. ",
-  "dn23:32.23": "Doch der Brahmanenschüler Uttara, der das Opfer organisierte, gab die Gaben sorgfältig, wohlbedacht, mit eigener Hand, und er gab keine Abfälle. Als sein Körper auseinanderbrach, nach dem Tod, wurde er unter den Göttern der Dreiunddreißig wiedergeboren. ",
+  "dn23:32.23": "Doch der Brahmanenschüler Uttara, der das Opfer organisierte, gab die Gaben sorgfältig, wohlbedacht, mit eigener Hand, und er gab keine Reste. Als sein Körper auseinanderbrach, nach dem Tod, wurde er unter den Göttern der Dreiunddreißig wiedergeboren. ",
   "dn23:33.0": "6. Der Gott Pāyāsi ",
   "dn23:33.1": "Zu dieser Zeit nun ging der Ehrwürdige Gavampati oft zu diesem leeren Akazienpalast, um den Tag über dort zu meditieren. ",
   "dn23:33.2": "Da ging der Gott Pāyāsi zu ihm, verbeugte sich und stellte sich zur Seite hin. Gavampati sagte zu ihm: ",
