Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -628,7 +628,7 @@
   "dn23:33.7": "„Das ist wahr, Herr, ich hatte eine solche Ansicht. ",
   "dn23:33.9": "Aber der Ehrwürdige Kassapa der Prinz brachte mich von diesem schädlichen Irrglauben ab.“ ",
   "dn23:33.10": "„Aber der Student mit Namen Uttara, der dieses Opfer für dich organisierte hat – wo wurde der wiedergeboren?“ ",
-  "dn23:33.11": "„Herr, Uttara gab die Gaben sorgfältig, wohlbedacht, mit eigener Hand, und er gab keine Abfälle. Als sein Körper auseinanderbrach, nach dem Tod, wurde er unter den Göttern der Dreiunddreißig wiedergeboren. ",
+  "dn23:33.11": "„Herr, Uttara gab die Gaben sorgfältig, wohlbedacht, mit eigener Hand, und er gab keine Reste. Als sein Körper auseinanderbrach, nach dem Tod, wurde er unter den Göttern der Dreiunddreißig wiedergeboren. ",
   "dn23:33.12": "Aber ich gab meine Gaben ohne Sorgfalt, gedankenlos, nicht mit eigener Hand, und ich gab die Abfälle. Als mein Körper auseinanderbrach, nach dem Tod, wurde ich unter den Göttern der Vier Großen Könige wiedergeboren, in einem leeren Akazienpalast. ",
   "dn23:33.13": "Wenn du daher in die Menschenwelt zurückkehrst, Herr, so gib bitte bekannt: ",
   "dn23:33.14": "‚Gebt eure Gaben sorgfältig, wohlbedacht, mit eigener Hand, und gebt keine Abfälle. ",
