Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -632,7 +632,7 @@
   "dn23:33.12": "Aber ich gab meine Gaben ohne Sorgfalt, gedankenlos, nicht mit eigener Hand, und ich gab die Reste. Als mein Körper auseinanderbrach, nach dem Tod, wurde ich unter den Göttern der Vier Großen Könige wiedergeboren, in einem leeren Akazienpalast. ",
   "dn23:33.13": "Wenn du daher in die Menschenwelt zurückkehrst, Herr, so gib bitte bekannt: ",
   "dn23:33.14": "‚Gebt eure Gaben sorgfältig, wohlbedacht, mit eigener Hand, und gebt keine Reste. ",
-  "dn23:33.15": "Der Stammesfürst Pāyāsi gab seine Gaben ohne Sorgfalt, gedankenlos, nicht mit eigener Hand, und er gab die Abfälle. Als sein Körper auseinanderbrach, nach dem Tod, wurde er unter den Göttern der Vier Großen Könige wiedergeboren, in einem leeren Akazienpalast. ",
+  "dn23:33.15": "Der Stammesfürst Pāyāsi gab seine Gaben ohne Sorgfalt, gedankenlos, nicht mit eigener Hand, und er gab die Reste. Als sein Körper auseinanderbrach, nach dem Tod, wurde er unter den Göttern der Vier Großen Könige wiedergeboren, in einem leeren Akazienpalast. ",
   "dn23:33.16": "Doch der Brahmanenschüler Uttara, der das Opfer organisierte, gab die Gaben sorgfältig, wohlbedacht, mit eigener Hand, und er gab keine Abfälle. Als sein Körper auseinanderbrach, nach dem Tod, wurde er unter den Göttern der Dreiunddreißig wiedergeboren.‘“ ",
   "dn23:34.1": "Und als der Ehrwürdige Gavampati in die Menschenwelt zurückkehrte, gab er das bekannt. "
 }
