--- a/translation/de/sabbamitta/sutta/an/an9/an9.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an9/an9.20_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "an9.20:2.2": "„Das tut sie, Herr. ",
   "an9.20:2.3": "Aber nur groben Getreideschleim mit Pökel.“ ",
   "an9.20:2.4": "„Hausbesitzer, jemand mag eine grobe oder eine feine Spende geben; ",
-  "an9.20:2.5": "aber er gibt sie ohne Sorgfalt, gedankenlos, nicht mit eigener Hand, er gibt die Abfälle, er gibt, ohne die Folgen zu bedenken – ",
+  "an9.20:2.5": "aber er gibt sie ohne Sorgfalt, gedankenlos, nicht mit eigener Hand, er gibt die Reste, er gibt, ohne die Folgen zu bedenken – ",
   "an9.20:2.6": "ganz gleich, wo sich das Ergebnis dieser Gabe zeigt, wird sein Geist nicht dazu neigen, gutes Essen, Kleidung, Fahrzeuge oder die feineren der fünf Arten von Sinnesreizen zu genießen. ",
   "an9.20:2.7": "Und seine Kinder, Frauen, Leibeigenen, Arbeiter und Angestellten hören ihm nicht richtig zu. Sie passen nicht auf und versuchen nicht zu verstehen. ",
   "an9.20:2.8": "Und warum? ",
