Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -223,7 +223,7 @@
   "ja-name:222.ja200": "Gut ist die Tugend ",
   "ja-name:223.ja-natamdalhavagga": "Das Kapitel über keine starke Fessel ",
   "ja-name:224.ja201": "Das Gefängnis ",
-  "ja-name:225.ja202": "Der König, der sich mit den Alten üble Späße erlaubte ",
+  "ja-name:225.ja202": "Der König, der mit den Alten üble Späße trieb ",
   "ja-name:226.ja203": "Liebe zu den Schlangenfamilien ",
   "ja-name:227.ja204": "Die Krähe mit Namen Heldin ",
   "ja-name:228.ja205": "Der Fisch aus dem Ganges ",
