--- a/translation/de/sabbamitta/sutta/an/an4/an4.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.67_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "an4.67:3.2": "Die königliche Schlangenfamilie der Virūpakkhas, der Erāpathas, der Chabyāputtas und der Kaṇhāgotamakas. … ",
   "an4.67:3.3": " ",
   "an4.67:3.4": " ",
-  "an4.67:4.1": "Mönche und Nonnen, ich mahne euch, euch den vier königlichen Schlangenfamilien mit liebevollem Herzen zuzuwenden, zu eurer eigenen Sicherheit, eurer Zuflucht und eurem Schutz. ",
+  "an4.67:4.1": "Mönche und Nonnen, ich mahne euch, euch den vier königlichen Schlangenfamilien mit liebevollem Herzen zuzuwenden, zu eurer eigenen Sicherheit, eurer Zuflucht und eurem Schutz: ",
   "an4.67:5.1": "Ich liebe die Virūpakkhas, ",
   "an4.67:5.2": "die Erāpathas liebe ich, ",
   "an4.67:5.3": "ich liebe die Chabyāputtas, ",
