Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -225,7 +225,7 @@
   "ja-name:224.ja201": "Das Gefängnis ",
   "ja-name:225.ja202": "Der König, der mit den Alten üble Späße trieb ",
   "ja-name:226.ja203": "Liebe zu den Schlangenfamilien ",
-  "ja-name:227.ja204": "Die Krähe mit Namen Held ",
+  "ja-name:227.ja204": "Die Krähe Viraka ",
   "ja-name:228.ja205": "Der Fisch aus dem Ganges ",
   "ja-name:229.ja206": "Die Antilope ",
   "ja-name:230.ja207": "Wie die Königin einen Wurm mehr liebte als den König Assaka ",
