--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.66:0.1": "Verbundene Lehrreden 22.66 ",
   "sn22.66:0.2": "7. Das Kapitel über die Vollendeten ",
-  "sn22.66:0.3": "Unbeständigkeit "
+  "sn22.66:0.3": "Unbeständigkeit ",
+  "sn22.66:1.1": "In Sāvatthī. "
 }
