Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.66:0.1": "Verbundene Lehrreden 22.66 ",
   "sn22.66:0.2": "7. Das Kapitel über die Vollendeten ",
   "sn22.66:0.3": "Unbeständigkeit ",
-  "sn22.66:1.1": "In Sāvatthī. "
+  "sn22.66:1.1": "In Sāvatthī. ",
+  "sn22.66:1.2": "Da ging ein Mönch zum Buddha … und sagte zu ihm: "
 }
