Translations by sabbamitta to translation/de/blurb/sn-blurbs_translation-de.json

--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -584,7 +584,7 @@
   "sn-blurbs:sn22.63": "Ein Mönch bittet um Unterweisung, bevor er sich zur Klausur zurückzieht. Der Buddha lehrt ihn, dass man sich durch Ergreifen an Māra bindet, und der Mönch gibt selbst die Erläuterung zu dieser kurzen Aussage. ",
   "sn-blurbs:sn22.64": "Ein Mönch bittet um Unterweisung, bevor er sich zur Klausur zurückzieht. Der Buddha lehrt ihn, dass man sich durch Sichgleichsetzen an Māra bindet, und der Mönch gibt selbst die Erläuterung zu dieser kurzen Aussage. ",
   "sn-blurbs:sn22.65": "Ein Mönch bittet um Unterweisung, bevor er sich zur Klausur zurückzieht. Der Buddha lehrt ihn, dass man sich durch das Finden von Vergnügen an Māra bindet, und der Mönch gibt selbst die Erläuterung zu dieser kurzen Aussage. ",
-  "sn-blurbs:sn22.66": "Ein Mönch bittet um Unterweisung, bevor er sich zur Klausur zurückzieht. … und der Mönch gibt selbst die Erläuterung zu dieser kurzen Aussage. ",
+  "sn-blurbs:sn22.66": "Ein Mönch bittet um Unterweisung, bevor er sich zur Klausur zurückzieht. Der Buddha leitet ihn an, das Verlangen nach allem Unbeständigen aufzugeben, und der Mönch gibt selbst die Erläuterung zu dieser kurzen Aussage. ",
   "sn-blurbs:sn22.67": "Ein Mönch bittet um Unterweisung, bevor er sich zur Klausur zurückzieht. … und der Mönch gibt selbst die Erläuterung zu dieser kurzen Aussage. ",
   "sn-blurbs:sn22.68": "Ein Mönch bittet um Unterweisung, bevor er sich zur Klausur zurückzieht. … und der Mönch gibt selbst die Erläuterung zu dieser kurzen Aussage. ",
   "sn-blurbs:sn22.69": "Ein Mönch bittet um Unterweisung, bevor er sich zur Klausur zurückzieht. … und der Mönch gibt selbst die Erläuterung zu dieser kurzen Aussage. ",
