--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn22.66:0.3": "Unbeständigkeit ",
   "sn22.66:1.1": "In Sāvatthī. ",
   "sn22.66:1.2": "Da ging ein Mönch zum Buddha … und sagte zu ihm: ",
-  "sn22.66:1.3": "„Herr, dass der Buddha mir in kurzer Form eine Dhammaunterweisung gebe. Wenn ich sie gehört habe, werde ich allein leben, zurückgezogen, beflissen, eifrig und entschlossen.“ "
+  "sn22.66:1.3": "„Herr, dass der Buddha mir in kurzer Form eine Dhammaunterweisung gebe. Wenn ich sie gehört habe, werde ich allein leben, zurückgezogen, beflissen, eifrig und entschlossen.“ ",
+  "sn22.66:1.4": "„Mönch, gib das Verlangen nach allem auf, was unbeständig ist.“ "
 }
