Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.66:2.2": "„Herr, Form ist unbeständig – ich sollte das Verlangen nach ihr aufgeben. ",
   "sn22.66:2.3": "Gefühl ist unbeständig … ",
   "sn22.66:2.4": "Wahrnehmung ist unbeständig … ",
-  "sn22.66:2.5": "Entscheidungen sind unbeständig … "
+  "sn22.66:2.5": "Entscheidungen sind unbeständig … ",
+  "sn22.66:2.6": "Bewusstsein ist unbeständig – ich sollte das Verlangen nach ihm aufgeben. "
 }
