Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.66:2.4": "Wahrnehmung ist unbeständig … ",
   "sn22.66:2.5": "Entscheidungen sind unbeständig … ",
   "sn22.66:2.6": "Bewusstsein ist unbeständig – ich sollte das Verlangen nach ihm aufgeben. ",
-  "sn22.66:2.7": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ "
+  "sn22.66:2.7": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ ",
+  "sn22.66:3.1": "„Gut, gut, Mönch! "
 }
