--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn22.66:3.3": "Form ist unbeständig – du solltest das Verlangen nach ihr aufgeben. ",
   "sn22.66:3.4": "Gefühl ist unbeständig … ",
   "sn22.66:3.5": "Wahrnehmung ist unbeständig … ",
-  "sn22.66:3.6": "Entscheidungen sind unbeständig … "
+  "sn22.66:3.6": "Entscheidungen sind unbeständig … ",
+  "sn22.66:3.7": "Bewusstsein ist unbeständig – du solltest das Verlangen nach ihm aufgeben. "
 }
