--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.66_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn22.66:3.5": "Wahrnehmung ist unbeständig … ",
   "sn22.66:3.6": "Entscheidungen sind unbeständig … ",
   "sn22.66:3.7": "Bewusstsein ist unbeständig – du solltest das Verlangen nach ihm aufgeben. ",
-  "sn22.66:3.8": "So ist die ausführliche Bedeutung dieser meiner kurzen Aussage zu verstehen.“ … "
+  "sn22.66:3.8": "So ist die ausführliche Bedeutung dieser meiner kurzen Aussage zu verstehen.“ … ",
+  "sn22.66:3.9": "Und jener Mönch wurde einer der Vollendeten. "
 }
