--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.67:0.1": "Verbundene Lehrreden 22.67 ",
   "sn22.67:0.2": "7. Das Kapitel über die Vollendeten ",
   "sn22.67:0.3": "Leiden ",
-  "sn22.67:1.1": "In Sāvatthī. "
+  "sn22.67:1.1": "In Sāvatthī. ",
+  "sn22.67:1.2": "Da ging ein Mönch zum Buddha … und sagte zu ihm: "
 }
