--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
@@ -5,5 +5,7 @@
   "sn22.67:1.1": "In Sāvatthī. ",
   "sn22.67:1.2": "Da ging ein Mönch zum Buddha … und sagte zu ihm: ",
   "sn22.67:1.3": "„Herr, dass der Buddha mir in kurzer Form eine Dhammaunterweisung gebe. Wenn ich sie gehört habe, werde ich allein leben, zurückgezogen, beflissen, eifrig und entschlossen.“ ",
-  "sn22.67:1.4": "„Mönch, gib das Verlangen nach allem auf, was Leiden ist.“ "
+  "sn22.67:1.4": "„Mönch, gib das Verlangen nach allem auf, was Leiden ist.“ ",
+  "sn22.67:1.5": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ ",
+  "sn22.67:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ "
 }
