--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.67:1.4": "„Mönch, gib das Verlangen nach allem auf, was Leiden ist.“ ",
   "sn22.67:1.5": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ ",
   "sn22.67:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ ",
-  "sn22.67:2.2": "„Herr, Form ist Leiden – ich sollte das Verlangen nach ihr aufgeben. "
+  "sn22.67:2.2": "„Herr, Form ist Leiden – ich sollte das Verlangen nach ihr aufgeben. ",
+  "sn22.67:2.3": "Gefühl ist Leiden … "
 }
