--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.67:2.2": "„Herr, Form ist Leiden – ich sollte das Verlangen nach ihr aufgeben. ",
   "sn22.67:2.3": "Gefühl ist Leiden … ",
   "sn22.67:2.4": "Wahrnehmung ist Leiden … ",
-  "sn22.67:2.5": "Entscheidungen sind Leiden … "
+  "sn22.67:2.5": "Entscheidungen sind Leiden … ",
+  "sn22.67:2.6": "Bewusstsein ist Leiden – ich sollte das Verlangen nach ihm aufgeben. "
 }
