--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.67:2.4": "Wahrnehmung ist Leiden … ",
   "sn22.67:2.5": "Entscheidungen sind Leiden … ",
   "sn22.67:2.6": "Bewusstsein ist Leiden – ich sollte das Verlangen nach ihm aufgeben. ",
-  "sn22.67:2.7": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ "
+  "sn22.67:2.7": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ ",
+  "sn22.67:3.1": "„Gut, gut, Mönch! "
 }
