--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn22.67:3.1": "„Gut, gut, Mönch! ",
   "sn22.67:3.2": "Es ist gut, dass du die ausführliche Bedeutung meiner kurzen Aussage so verstehst. ",
   "sn22.67:3.3": "Form ist Leiden – du solltest das Verlangen nach ihr aufgeben. ",
-  "sn22.67:3.4": "Gefühl ist Leiden … "
+  "sn22.67:3.4": "Gefühl ist Leiden … ",
+  "sn22.67:3.5": "Wahrnehmung ist Leiden … "
 }
