Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn22.67:3.3": "Form ist Leiden – du solltest das Verlangen nach ihr aufgeben. ",
   "sn22.67:3.4": "Gefühl ist Leiden … ",
   "sn22.67:3.5": "Wahrnehmung ist Leiden … ",
-  "sn22.67:3.6": "Entscheidungen sind Leiden … "
+  "sn22.67:3.6": "Entscheidungen sind Leiden … ",
+  "sn22.67:3.7": "Bewusstsein ist Leiden – du solltest das Verlangen nach ihm aufgeben. "
 }
