Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.67_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.67:3.4": "Gefühl ist Leiden … ",
   "sn22.67:3.5": "Wahrnehmung ist Leiden … ",
   "sn22.67:3.6": "Entscheidungen sind Leiden … ",
-  "sn22.67:3.7": "Bewusstsein ist Leiden – du solltest das Verlangen nach ihm aufgeben. "
+  "sn22.67:3.7": "Bewusstsein ist Leiden – du solltest das Verlangen nach ihm aufgeben. ",
+  "sn22.67:3.8": "So ist die ausführliche Bedeutung dieser meiner kurzen Aussage zu verstehen.“ … "
 }
