--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn22.68:0.1": "Verbundene Lehrreden 22.68 ",
-  "sn22.68:0.2": "7. Das Kapitel über die Vollendeten "
+  "sn22.68:0.2": "7. Das Kapitel über die Vollendeten ",
+  "sn22.68:0.3": "Nicht-Selbst "
 }
