Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -676,7 +676,7 @@
   "sn-name:675.sn22.65": "Wenn du Vergnügen findest ",
   "sn-name:676.sn22.66": "Unbeständigkeit ",
   "sn-name:677.sn22.67": "Leiden ",
-  "sn-name:678.sn22.68": "Nicht-selbst ",
+  "sn-name:678.sn22.68": "Nicht-Selbst ",
   "sn-name:683.sn22-khajjaniyavagga": "Das Kapitel über Jucken ",
   "sn-name:694.sn22-theravagga": "Das Kapitel mit Ordensältesten ",
   "sn-name:702.sn22.90": "Mit Channa ",
