--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.68:1.4": "„Mönch, gib das Verlangen nach allem auf, was nicht-selbst ist.“ ",
   "sn22.68:1.5": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ ",
   "sn22.68:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ ",
-  "sn22.68:2.2": "„Herr, Form ist nicht-selbst – ich sollte das Verlangen nach ihr aufgeben. "
+  "sn22.68:2.2": "„Herr, Form ist nicht-selbst – ich sollte das Verlangen nach ihr aufgeben. ",
+  "sn22.68:2.3": "Gefühl ist nicht-selbst … "
 }
