Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn22.68:2.3": "Gefühl ist nicht-selbst … ",
   "sn22.68:2.4": "Wahrnehmung ist nicht-selbst … ",
   "sn22.68:2.5": "Entscheidungen sind nicht-selbst … ",
-  "sn22.68:2.6": "Bewusstsein ist nicht-selbst – ich sollte das Verlangen nach ihm aufgeben. "
+  "sn22.68:2.6": "Bewusstsein ist nicht-selbst – ich sollte das Verlangen nach ihm aufgeben. ",
+  "sn22.68:2.7": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ "
 }
