Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn22.68:3.3": "Form ist nicht-selbst – du solltest das Verlangen nach ihr aufgeben. ",
   "sn22.68:3.4": "Gefühl ist nicht-selbst … ",
   "sn22.68:3.5": "Wahrnehmung ist nicht-selbst … ",
-  "sn22.68:3.6": "Entscheidungen sind nicht-selbst … "
+  "sn22.68:3.6": "Entscheidungen sind nicht-selbst … ",
+  "sn22.68:3.7": "Bewusstsein ist nicht-selbst – ich sollte das Verlangen nach ihm aufgeben. "
 }
