Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -677,6 +677,7 @@
   "sn-name:676.sn22.66": "Unbeständigkeit ",
   "sn-name:677.sn22.67": "Leiden ",
   "sn-name:678.sn22.68": "Nicht-Selbst ",
+  "sn-name:679.sn22.69": "Nicht zu einem Selbst gehörend ",
   "sn-name:683.sn22-khajjaniyavagga": "Das Kapitel über Jucken ",
   "sn-name:694.sn22-theravagga": "Das Kapitel mit Ordensältesten ",
   "sn-name:702.sn22.90": "Mit Channa ",
