Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn22.69:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ ",
   "sn22.69:2.2": "„Herr, Form gehört nicht zu einem Selbst – ich sollte das Verlangen nach ihr aufgeben. ",
   "sn22.69:2.3": "Gefühl gehört nicht zu einem Selbst … ",
-  "sn22.69:2.4": "Wahrnehmung gehört nicht zu einem Selbst … "
+  "sn22.69:2.4": "Wahrnehmung gehört nicht zu einem Selbst … ",
+  "sn22.69:2.5": "Entscheidungen gehören nicht zu einem Selbst … "
 }
