Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn22.69:3.2": "Es ist gut, dass du die ausführliche Bedeutung meiner kurzen Aussage so verstehst. ",
   "sn22.69:3.3": "Form gehört nicht zu einem Selbst – du solltest das Verlangen nach ihr aufgeben. ",
   "sn22.69:3.4": "Gefühl gehört nicht zu einem Selbst … ",
-  "sn22.69:3.5": "Wahrnehmung gehört nicht zu einem Selbst … "
+  "sn22.69:3.5": "Wahrnehmung gehört nicht zu einem Selbst … ",
+  "sn22.69:3.6": "Entscheidungen gehören nicht zu einem Selbst … "
 }
