Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.69:3.4": "Gefühl gehört nicht zu einem Selbst … ",
   "sn22.69:3.5": "Wahrnehmung gehört nicht zu einem Selbst … ",
   "sn22.69:3.6": "Entscheidungen gehören nicht zu einem Selbst … ",
-  "sn22.69:3.7": "Bewusstsein gehört nicht zu einem Selbst – du solltest das Verlangen nach ihm aufgeben. "
+  "sn22.69:3.7": "Bewusstsein gehört nicht zu einem Selbst – du solltest das Verlangen nach ihm aufgeben. ",
+  "sn22.69:3.8": "So ist die ausführliche Bedeutung dieser meiner kurzen Aussage zu verstehen.“ … "
 }
