Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.70:1.5": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ ",
   "sn22.70:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ ",
   "sn22.70:2.2": "„Herr, Form steckt im Erregenden fest – ich sollte das Verlangen nach ihr aufgeben. ",
-  "sn22.70:2.3": "Gefühl steckt im Erregenden fest … "
+  "sn22.70:2.3": "Gefühl steckt im Erregenden fest … ",
+  "sn22.70:2.4": "Wahrnehmung steckt im Erregenden fest … "
 }
